--- a/wzup/Base.lproj/Main.storyboard
+++ b/wzup/Base.lproj/Main.storyboard
@@ -959,11 +959,11 @@
                                                             </mask>
                                                             <mask key="constraints">
                                                                 <exclude reference="nFe-oL-WPv"/>
+                                                                <exclude reference="7Vk-hV-BML"/>
+                                                                <exclude reference="Bxq-Oy-FVm"/>
                                                                 <exclude reference="Csl-KJ-gvN"/>
                                                                 <exclude reference="l5f-Jj-Ab7"/>
                                                                 <exclude reference="wzV-xN-A5I"/>
-                                                                <exclude reference="7Vk-hV-BML"/>
-                                                                <exclude reference="Bxq-Oy-FVm"/>
                                                             </mask>
                                                         </variation>
                                                         <variation key="heightClass=regular-widthClass=compact">
@@ -973,11 +973,11 @@
                                                             </mask>
                                                             <mask key="constraints">
                                                                 <include reference="nFe-oL-WPv"/>
+                                                                <exclude reference="7Vk-hV-BML"/>
+                                                                <include reference="Bxq-Oy-FVm"/>
                                                                 <include reference="Csl-KJ-gvN"/>
                                                                 <include reference="l5f-Jj-Ab7"/>
                                                                 <include reference="wzV-xN-A5I"/>
-                                                                <exclude reference="7Vk-hV-BML"/>
-                                                                <include reference="Bxq-Oy-FVm"/>
                                                             </mask>
                                                         </variation>
                                                     </view>
@@ -1714,10 +1714,10 @@
             </objects>
             <point key="canvasLocation" x="4723.5" y="1049.25"/>
         </scene>
-        <!--View Controller-->
+        <!--Add Users-->
         <scene sceneID="Dpi-31-UG6">
             <objects>
-                <viewController id="LaZ-bo-sod" sceneMemberID="viewController">
+                <viewController storyboardIdentifier="search" id="LaZ-bo-sod" customClass="SearchViewController" sceneMemberID="viewController">
                     <layoutGuides>
                         <viewControllerLayoutGuide type="top" id="Ulw-Te-uZa"/>
                         <viewControllerLayoutGuide type="bottom" id="Qhe-vF-XFr"/>
@@ -1725,8 +1725,174 @@
                     <view key="view" contentMode="scaleToFill" id="yzQ-lq-ZFM">
                         <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Search" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="U3s-qE-TgJ">
+                                <rect key="frame" x="0.0" y="-30" width="97" height="30"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="30" id="hxZ-MG-1Dp">
+                                        <variation key="heightClass=regular-widthClass=compact" constant="40"/>
+                                    </constraint>
+                                </constraints>
+                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                <textInputTraits key="textInputTraits"/>
+                                <variation key="default">
+                                    <mask key="constraints">
+                                        <exclude reference="hxZ-MG-1Dp"/>
+                                    </mask>
+                                </variation>
+                                <variation key="heightClass=regular-widthClass=compact" ambiguous="YES" misplaced="YES">
+                                    <rect key="frame" x="43" y="109" width="308" height="40"/>
+                                    <mask key="constraints">
+                                        <include reference="hxZ-MG-1Dp"/>
+                                    </mask>
+                                </variation>
+                            </textField>
+                            <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="search-icon.png" translatesAutoresizingMaskIntoConstraints="NO" id="7HY-nT-Hq5">
+                                <rect key="frame" x="0.0" y="0.0" width="240" height="128"/>
+                                <constraints>
+                                    <constraint firstAttribute="width" constant="29" id="Lmc-Si-own">
+                                        <variation key="heightClass=regular-widthClass=compact" constant="20"/>
+                                    </constraint>
+                                    <constraint firstAttribute="height" constant="29" id="ooD-zP-BJI">
+                                        <variation key="heightClass=regular-widthClass=compact" constant="20"/>
+                                    </constraint>
+                                </constraints>
+                                <variation key="default">
+                                    <mask key="constraints">
+                                        <exclude reference="Lmc-Si-own"/>
+                                        <exclude reference="ooD-zP-BJI"/>
+                                    </mask>
+                                </variation>
+                                <variation key="heightClass=regular-widthClass=compact" misplaced="YES">
+                                    <rect key="frame" x="15" y="119" width="20" height="20"/>
+                                    <mask key="constraints">
+                                        <include reference="Lmc-Si-own"/>
+                                        <include reference="ooD-zP-BJI"/>
+                                    </mask>
+                                </variation>
+                            </imageView>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="USERNAME" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="kCx-ei-omM">
+                                <rect key="frame" x="0.0" y="-21" width="42" height="21"/>
+                                <fontDescription key="fontDescription" name="HelveticaNeue-Bold" family="Helvetica Neue" pointSize="12"/>
+                                <color key="textColor" red="0.5568627451" green="0.2666666667" blue="0.67843137249999996" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                <nil key="highlightedColor"/>
+                                <variation key="heightClass=regular-widthClass=compact" misplaced="YES">
+                                    <rect key="frame" x="15" y="168" width="95" height="21"/>
+                                </variation>
+                            </label>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="JUb-BC-izT">
+                                <rect key="frame" x="0.0" y="-21" width="42" height="21"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                <color key="textColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
+                                <nil key="highlightedColor"/>
+                                <variation key="heightClass=regular-widthClass=compact" misplaced="YES">
+                                    <rect key="frame" x="15" y="203" width="42" height="21"/>
+                                </variation>
+                            </label>
+                            <activityIndicatorView opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="750" verticalHuggingPriority="750" animating="YES" style="gray" translatesAutoresizingMaskIntoConstraints="NO" id="TDb-MX-Jzg">
+                                <rect key="frame" x="-10" y="-10" width="20" height="20"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="20" id="0Ec-Qp-T7z"/>
+                                    <constraint firstAttribute="width" constant="20" id="Vp5-KG-EtA"/>
+                                    <constraint firstAttribute="width" constant="20" id="qoi-AQ-q8H"/>
+                                    <constraint firstAttribute="height" constant="20" id="rhH-0z-Vaa"/>
+                                </constraints>
+                                <variation key="default">
+                                    <mask key="constraints">
+                                        <exclude reference="0Ec-Qp-T7z"/>
+                                        <exclude reference="Vp5-KG-EtA"/>
+                                        <exclude reference="qoi-AQ-q8H"/>
+                                        <exclude reference="rhH-0z-Vaa"/>
+                                    </mask>
+                                </variation>
+                                <variation key="heightClass=regular-widthClass=compact" misplaced="YES">
+                                    <rect key="frame" x="364" y="203" width="20" height="20"/>
+                                    <mask key="constraints">
+                                        <exclude reference="0Ec-Qp-T7z"/>
+                                        <include reference="Vp5-KG-EtA"/>
+                                        <exclude reference="qoi-AQ-q8H"/>
+                                        <include reference="rhH-0z-Vaa"/>
+                                    </mask>
+                                </variation>
+                            </activityIndicatorView>
+                        </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                        <constraints>
+                            <constraint firstItem="kCx-ei-omM" firstAttribute="top" secondItem="U3s-qE-TgJ" secondAttribute="bottom" constant="19" id="4dM-gc-SZD"/>
+                            <constraint firstItem="JUb-BC-izT" firstAttribute="top" secondItem="kCx-ei-omM" secondAttribute="bottom" constant="18" id="4pw-Pl-B0n"/>
+                            <constraint firstItem="U3s-qE-TgJ" firstAttribute="top" secondItem="Ulw-Te-uZa" secondAttribute="bottom" constant="45" id="7o7-S0-olx"/>
+                            <constraint firstAttribute="trailingMargin" secondItem="U3s-qE-TgJ" secondAttribute="trailing" constant="10" id="Ht2-mG-84Y"/>
+                            <constraint firstItem="7HY-nT-Hq5" firstAttribute="centerY" secondItem="U3s-qE-TgJ" secondAttribute="centerY" constant="-0.5" id="LIF-kb-ENx"/>
+                            <constraint firstItem="JUb-BC-izT" firstAttribute="leading" secondItem="yzQ-lq-ZFM" secondAttribute="leadingMargin" constant="-1" id="TEk-Ho-vMO"/>
+                            <constraint firstAttribute="trailingMargin" secondItem="TDb-MX-Jzg" secondAttribute="trailing" constant="-5" id="WUh-Ud-VjB"/>
+                            <constraint firstItem="U3s-qE-TgJ" firstAttribute="width" secondItem="yzQ-lq-ZFM" secondAttribute="width" id="agM-eP-t7l"/>
+                            <constraint firstItem="U3s-qE-TgJ" firstAttribute="leading" secondItem="yzQ-lq-ZFM" secondAttribute="leadingMargin" constant="27" id="b9F-Bj-bCR"/>
+                            <constraint firstItem="7HY-nT-Hq5" firstAttribute="leading" secondItem="yzQ-lq-ZFM" secondAttribute="leadingMargin" constant="-10" id="czZ-ic-ij6">
+                                <variation key="heightClass=regular-widthClass=compact" constant="5"/>
+                            </constraint>
+                            <constraint firstItem="TDb-MX-Jzg" firstAttribute="centerY" secondItem="U3s-qE-TgJ" secondAttribute="centerY" id="hdL-GI-NQV"/>
+                            <constraint firstItem="kCx-ei-omM" firstAttribute="leading" secondItem="yzQ-lq-ZFM" secondAttribute="leadingMargin" constant="-1" id="rDB-QU-18X"/>
+                            <constraint firstItem="TDb-MX-Jzg" firstAttribute="trailing" secondItem="yzQ-lq-ZFM" secondAttribute="trailingMargin" id="sfK-fV-FdE"/>
+                            <constraint firstItem="TDb-MX-Jzg" firstAttribute="centerY" secondItem="JUb-BC-izT" secondAttribute="centerY" constant="-0.5" id="w1P-wy-oaP"/>
+                        </constraints>
+                        <variation key="default">
+                            <mask key="subviews">
+                                <exclude reference="U3s-qE-TgJ"/>
+                                <exclude reference="7HY-nT-Hq5"/>
+                                <exclude reference="kCx-ei-omM"/>
+                                <exclude reference="JUb-BC-izT"/>
+                                <exclude reference="TDb-MX-Jzg"/>
+                            </mask>
+                            <mask key="constraints">
+                                <exclude reference="7o7-S0-olx"/>
+                                <exclude reference="Ht2-mG-84Y"/>
+                                <exclude reference="agM-eP-t7l"/>
+                                <exclude reference="b9F-Bj-bCR"/>
+                                <exclude reference="LIF-kb-ENx"/>
+                                <exclude reference="czZ-ic-ij6"/>
+                                <exclude reference="4dM-gc-SZD"/>
+                                <exclude reference="rDB-QU-18X"/>
+                                <exclude reference="4pw-Pl-B0n"/>
+                                <exclude reference="TEk-Ho-vMO"/>
+                                <exclude reference="WUh-Ud-VjB"/>
+                                <exclude reference="hdL-GI-NQV"/>
+                                <exclude reference="sfK-fV-FdE"/>
+                                <exclude reference="w1P-wy-oaP"/>
+                            </mask>
+                        </variation>
+                        <variation key="heightClass=regular-widthClass=compact">
+                            <mask key="subviews">
+                                <include reference="U3s-qE-TgJ"/>
+                                <include reference="7HY-nT-Hq5"/>
+                                <include reference="kCx-ei-omM"/>
+                                <include reference="JUb-BC-izT"/>
+                                <include reference="TDb-MX-Jzg"/>
+                            </mask>
+                            <mask key="constraints">
+                                <include reference="7o7-S0-olx"/>
+                                <exclude reference="Ht2-mG-84Y"/>
+                                <include reference="agM-eP-t7l"/>
+                                <exclude reference="b9F-Bj-bCR"/>
+                                <include reference="LIF-kb-ENx"/>
+                                <include reference="czZ-ic-ij6"/>
+                                <include reference="4dM-gc-SZD"/>
+                                <include reference="rDB-QU-18X"/>
+                                <include reference="4pw-Pl-B0n"/>
+                                <include reference="TEk-Ho-vMO"/>
+                                <exclude reference="WUh-Ud-VjB"/>
+                                <exclude reference="hdL-GI-NQV"/>
+                                <include reference="sfK-fV-FdE"/>
+                                <include reference="w1P-wy-oaP"/>
+                            </mask>
+                        </variation>
                     </view>
+                    <navigationItem key="navigationItem" title="Add Users" id="MGz-04-9Jj"/>
+                    <connections>
+                        <outlet property="indicator" destination="TDb-MX-Jzg" id="cO1-BU-8qL"/>
+                        <outlet property="searchIcon" destination="7HY-nT-Hq5" id="88h-w8-wmf"/>
+                        <outlet property="searchTextField" destination="U3s-qE-TgJ" id="itV-4K-km8"/>
+                        <outlet property="userLabel" destination="JUb-BC-izT" id="JKz-Wp-si4"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="xF3-KK-TCt" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
@@ -2366,7 +2532,9 @@
                         <color key="tintColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                         <color key="barTintColor" red="0.5568627451" green="0.2666666667" blue="0.67843137249999996" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                         <textAttributes key="titleTextAttributes">
+                            <fontDescription key="fontDescription" name="HelveticaNeue-Thin" family="Helvetica Neue" pointSize="22"/>
                             <color key="textColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                            <offsetWrapper key="textShadowOffset" horizontal="0.0" vertical="0.0"/>
                         </textAttributes>
                     </navigationBar>
                     <nil name="viewControllers"/>
